experiments/type-system/tests/snapshots/infer__call.snap
---
source: tests/infer.rs
expression: bindings
---
f:
  Function:
    param:
      - a
      - Builtin: Int
    ret:
      Builtin: Int

