experiments/type-system/tests/snapshots/infer__full.snap
---
source: tests/infer.rs
expression: bindings
---
inner:
  - - intToStr
    - Function:
        param:
          - n
          - Builtin: Int
        ret:
          Builtin: Str
  - - print
    - Function:
        param:
          - v
          - Builtin: Any
        ret:
          Builtin: Any
  - - v
    - Record:
        fields:
          - ident: x
            ty:
              Builtin: Int
          - ident: y
            ty:
              Builtin: Int
  - - fib
    - Function:
        param:
          - n
          - Builtin: Int
        ret:
          Builtin: Int
  - - print_square
    - Function:
        param:
          - n
          - Builtin: Int
        ret:
          Builtin: Int
  - - unwrap
    - Function:
        param:
          - r
          - Record:
              fields:
                - ident: v
                  ty:
                    Builtin: Int
        ret:
          Builtin: Int

