experiments/type-system/tests/snapshots/infer__if_expr_with_non_bool_cond.snap
---
source: tests/infer.rs
expression: errors
---
- TypeMismatch:
    lhs:
      start: 6
      end: 7
    rhs: bool

