experiments/type-system/tests/snapshots/infer__scoping.snap
---
source: tests/infer.rs
expression: errors
---
- VarNotDefined:
    token:
      lexeme: x
      span:
        start: 46
        end: 47
      kind: Ident

