experiments/type-system/tests/snapshots/infer__shadowing.snap
---
source: tests/infer.rs
expression: bindings
---
inner:
  - - intToStr
    - Function:
        param:
          - n
          - Builtin: Int
        ret:
          Builtin: Str
  - - print
    - Function:
        param:
          - v
          - Builtin: Any
        ret:
          Builtin: Any
  - - print_square
    - Function:
        param:
          - n
          - Builtin: Int
        ret:
          Builtin: Int

